[project]
name = "tdxh_node_comfyui"
description = "Nodes:TdxhImageToSize, TdxhImageToSizeAdvanced, TdxhLoraLoader, TdxhIntInput, TdxhFloatInput, TdxhStringInput. Some nodes for stable diffusion comfyui. Sometimes it helps conveniently to use less nodes for doing the same things."
version = "1.0.0"
license = "LICENSE"
dependencies = ["sentencepiece"]

[project.urls]
Repository = "https://github.com/youyegit/tdxh_node_comfyui"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "tdxh_node_comfyui"
Icon = ""
