[project]
name = "tdxh_node_comfyui"
description = "Add Switch on nodes, Make nodes amount small! It helps conveniently to use less nodes for doing the same things.  "
version = "1.0.0"
license = { file = "LICENSE" }
dependencies = ["sentencepiece"]

[project.urls]
Repository = "https://github.com/youyegit/tdxh_node_comfyui"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "youyegit"
DisplayName = "tdxh_node_comfyui"
Icon = ""
